# serial-to-tcp

./: .woodpecker.yml  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: rust.yml
etc/init.d/: README.md  serial-to-tcp
src/: app.rs  chunk.rs  config.rs  main.rs
