[package]
name = "serial-to-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
#flexi_logger = "0.22"
simple_logger = "2.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-serial = "5.4"
